tests/integration/fail/math_max_arg_error.kr
# Test max function argument count error

# max with no args
set mx to call max
# Expected: Runtime error - max expects at least 1 argument

